solved bug where banner is fixed on mobile screens

--- a/wordpress/wp-content/themes/thulme/assets/less/config.less
+++ b/wordpress/wp-content/themes/thulme/assets/less/config.less
@@ -8,7 +8,7 @@
 @stockholm:       #fcfffc;
 @deep-sea:        #32373C;
 @investing:       #40E2E1;
-@thulme:          #102753;
+@thulme:          #8392a3;
 @startup-tools:   #90CC3A;
 @open-design:     #EBC434;
 @weiji:           #D13351;
